// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Login with users 1`] = `
<div
  className="Login"
>
  <h1>
    Who is it ?
  </h1>
  <div
    className="avatars-grid"
    style={Object {}}
  >
    <a
      href="devices"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        className="Avatar"
        style={
          Object {
            "backgroundImage": "url(https://randomuser.me/api/portraits/women/79.jpg)",
          }
        }
      />
      <p>
        Mustang
      </p>
    </a>
    <a
      href="devices"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        className="Avatar"
        style={
          Object {
            "backgroundImage": "url(https://randomuser.me/api/portraits/men/1.jpg)",
          }
        }
      />
      <p>
        Jeff
      </p>
    </a>
    <a
      href="register"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        style={
          Object {
            "height": "120px",
          }
        }
      >
        <svg
          height={120}
          viewBox="0 0 120 120"
          width={120}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <circle
              cx={60}
              cy={60}
              id="plus-button-svg-a"
              r={60}
            />
            <path
              d="M78.667 60c0 1.4-.934 2.333-2.334 2.333h-14v14c0 1.4-.933 2.334-2.333 2.334-1.4 0-2.333-.934-2.333-2.334v-14h-14c-1.4 0-2.334-.933-2.334-2.333 0-1.4.934-2.333 2.334-2.333h14v-14c0-1.4.933-2.334 2.333-2.334 1.4 0 2.333.934 2.333 2.334v14h14c1.4 0 2.334.933 2.334 2.333z"
              id="plus-button-svg-b"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <use
              fill="#FFF"
              xlinkHref="#plus-button-svg-a"
            />
            <circle
              cx={60}
              cy={60}
              r={59}
              stroke="#CCC"
              strokeWidth={2}
            />
            <use
              fill="#CCC"
              fillRule="nonzero"
              xlinkHref="#plus-button-svg-b"
            />
          </g>
        </svg>
      </div>
      <p
        id="add-user"
      >
        Add user
      </p>
    </a>
  </div>
</div>
`;

exports[`renders Login without users 1`] = `
<div
  className="Login"
>
  <h1>
    Who is it ?
  </h1>
  <div
    className="avatars-grid"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <a
      href="register"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        style={
          Object {
            "height": "120px",
          }
        }
      >
        <svg
          height={120}
          viewBox="0 0 120 120"
          width={120}
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <circle
              cx={60}
              cy={60}
              id="plus-button-svg-a"
              r={60}
            />
            <path
              d="M78.667 60c0 1.4-.934 2.333-2.334 2.333h-14v14c0 1.4-.933 2.334-2.333 2.334-1.4 0-2.333-.934-2.333-2.334v-14h-14c-1.4 0-2.334-.933-2.334-2.333 0-1.4.934-2.333 2.334-2.333h14v-14c0-1.4.933-2.334 2.333-2.334 1.4 0 2.333.934 2.333 2.334v14h14c1.4 0 2.334.933 2.334 2.333z"
              id="plus-button-svg-b"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <use
              fill="#FFF"
              xlinkHref="#plus-button-svg-a"
            />
            <circle
              cx={60}
              cy={60}
              r={59}
              stroke="#CCC"
              strokeWidth={2}
            />
            <use
              fill="#CCC"
              fillRule="nonzero"
              xlinkHref="#plus-button-svg-b"
            />
          </g>
        </svg>
      </div>
      <p
        id="add-user"
      >
        Add user
      </p>
    </a>
  </div>
</div>
`;
